[workspace]

members = [
  "branches",
  "closures",
  "concurrency",
  "enums",
  "errors",
  "functions",
  "generics",
  "guessing_game",
  "hash_maps",
  "hello_cargo",
  # "hello_world",
  "iterators",
  "lifetimes",
  "mini_grep",
  "ownership",
  "references",
  "restaurant",
  "slices",
  "smart_pointers",
  "structs",
  "tests",
  "variables",
  "vectors",
]
