[workspace]

members = [
  "advanced_functions_closures",
  "advanced_traits",
  "advanced_types",
  "branches",
  "closures",
  "concurrency",
  "enums",
  "errors",
  "functions",
  "generics",
  "guessing_game",
  "hash_maps",
  "hello_cargo",
  # "hello_world",
  "iterators",
  "lifetimes",
  "mini_grep",
  "macros",
  "ownership",
  "patterns",
  "references",
  "restaurant",
  "slices",
  "smart_pointers",
  "structs",
  "tests",
  "unsafe_rust",
  "variables",
  "vectors",
]
